[package]
name = "shadergraph"
version = "0.1.0"
edition = "2018"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
description = "Create evolving artistic images with hot-code-reloaded Lisp and GLSL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tonarino/shadergraph"
homepage = "https://blog.tonari.no/shadergraph"
keywords = ["shader", "glsl", "lisp", "reload", "shdergraph"]

[dependencies]
glium = "0.30.2"
image = "0.23"
notify = "5.0.0-pre.12"
lexpr = "0.2.6"
include_dir = "0.6"
ffmpeg-next = "4.4"
structopt = "0.3"
