[package]
name = "shadergarden"
version = "0.2.0"
edition = "2018"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
description = "Create evolving gardens of shaders with Lisp and GLSL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tonarino/shadergarden"
homepage = "https://blog.tonari.no/shadergarden"
keywords = ["shader", "glsl", "lisp", "reload", "garden"]

[features]
default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next"]

[dependencies]
glium = "0.30.2"
image = "0.23"
notify = "5.0.0-pre.12"
lexpr = "0.2.6"
include_dir = "0.6"
ffmpeg-next = { version = "4.4", optional = true }
structopt = "0.3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.14"
